--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
-
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
 		<meta
 			name="description"
 			content="HotSoup is an opensource mobile app project started to help those in need find their next meal by locating nearby soup kitchens and food pantries."
